criando o header e inicio

--- a/index.html
+++ b/index.html
@@ -4,6 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CineBR</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <p><i class="fa-solid fa-film"></i>Cinema Brasileiro</p>
+      <nav>
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Filmes</a></li>
+          <li><a href="#">Curiosidades</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!--Foto de <a href="https://unsplash.com/pt-br/@jeremyyappy?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jeremy Yap</a> na <a href="https://unsplash.com/pt-br/fotografias/turned-on-projector-J39X2xX_8CQ?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+      -->
+    <main>
+      <div class="inicio">
+        <h1>O melhor do cinema brasileiro</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius, error
+          voluptas maiores, quos sunt odit laudantium dolorem qui expedita
+          consectetur quas labore dolorum sequi maxime delectus non harum
+          molestias porro?
+        </p>
+      </div>
+    </main>
+  </body>
 </html>
