--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--Foto de <a href="https://unsplash.com/pt-br/@jeremyyappy?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jeremy Yap</a> na <a href="https://unsplash.com/pt-br/fotografias/turned-on-projector-J39X2xX_8CQ?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
       -->
     <main>
-      <div class="inicio">
+      <section id="inicio">
         <h1>O melhor do cinema brasileiro</h1>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius, error
@@ -32,7 +32,69 @@
           consectetur quas labore dolorum sequi maxime delectus non harum
           molestias porro?
         </p>
-      </div>
+      </section>
+      <section id="filmes">
+        <h2>Comedia</h2>
+        <div class="filme-caixa">
+          <div class="filme"></div>
+          <div class="filme-info">
+            <h3>Minha mão é uma peça (2013)</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti
+              ad officiis ipsa consequatur reiciendis sequi, recusandae quaerat
+              quas laudantium facere enim tempore optio quo nulla iste
+              architecto ex sunt pariatur.
+            </p>
+            <p><span>Direção:</span> André Pellenz</p>
+            <p>
+              <span>Elenco principal:</span> Paulo Gustavo, Rodrigo Pandolfo,
+              Mariana Xavier, Herson Capri, Ingrid Guimarães.
+            </p>
+            <p>Disponivel em:</p>
+            <div class="onde-assistir">
+              <p>GloboPlay</p>
+              <p>PrimeVideo</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="curiosidades">
+        <h2>Curiosidades e Premiações</h2>
+        <div class="curiosidades">
+          <h3>Curiosidades</h3>
+          <div class="info-curi">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+              obcaecati corrupti dolore sequi dolor magnam ex vel dicta!
+              Laboriosam itaque illo optio doloremque exercitationem aliquam
+              porro quae at animi voluptate.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis at
+              accusantium aut aliquid consectetur sapiente repellat vero rerum
+              cupiditate itaque temporibus non, ullam quisquam placeat facilis
+              quam maiores iure unde.
+            </p>
+          </div>
+        </div>
+        <div class="premiacoes">
+          <h3>Premiações</h3>
+          <div class="info-premi">
+            <h4>O Pagador de Promessas</h4>
+            <p>Palma de Ouro - Festival de Cannes (1962)</p>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer>
+      <h3>Cinema Brasileiro</h3>
+      <p>Uma celebração do cinema nacional brasileiro</p>
+      <p>© 2025 Cinema Brasileiro. Desenvolvido com paixão pela sétima arte.</p>
+      <p>
+        Todas as informações sobre filmes são de domínio público. As plataformas
+        de streaming mencionadas são de propriedade de suas respectivas
+        empresas.
+      </p>
+    </footer>
   </body>
 </html>
