--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/mediaquery.css" />
   </head>
   <body>
     <header>
@@ -30,10 +31,9 @@
       <section id="inicio">
         <h1>O melhor do cinema brasileiro</h1>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius, error
-          voluptas maiores, quos sunt odit laudantium dolorem qui expedita
-          consectetur quas labore dolorum sequi maxime delectus non harum
-          molestias porro?
+          Uma celebração da rica cinematografia nacional, das comédias que nos
+          fazem rir às histórias dramáticas que tocam nossos corações. Descubra
+          obras-primas que definem a identidade cultural do Brasil.
         </p>
       </section>
       <section id="filmes">
