--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       -->
     <main>
       <section id="inicio">
-        <h1>O melhor do cinema brasileiro</h1>
+        <h1>O Melhor do Cinema Brasileiro</h1>
         <p>
           Uma celebração da rica cinematografia nacional, das comédias que nos
           fazem rir às histórias dramáticas que tocam nossos corações. Descubra
@@ -37,24 +37,25 @@
         </p>
       </section>
       <section id="filmes">
-        <h2>Comedia</h2>
+        <h2>Comédia</h2>
         <div class="filme-caixa">
-          <div class="filme"></div>
-          <div class="filme-info">
-            <h3>Minha mão é uma peça (2013)</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti
-              ad officiis ipsa consequatur reiciendis sequi, recusandae quaerat
-              quas laudantium facere enim tempore optio quo nulla iste
-              architecto ex sunt pariatur.
+          <img src="img/minha-mãe.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>Minha Mãe é Uma Peça (2013)</h3>
+            <p class="filme-sobre">
+              Dona Hermínia é uma mulher de meia idade, divorciada, que se
+              dedica inteiramente aos filhos. Quando eles decidem se mudar, ela
+              precisa aprender a lidar com a solidão e redescobrir a si mesma.
             </p>
-            <p><span>Direção:</span> André Pellenz</p>
-            <p>
-              <span>Elenco principal:</span> Paulo Gustavo, Rodrigo Pandolfo,
-              Mariana Xavier, Herson Capri, Ingrid Guimarães.
+            <p class="filme-diretor"><span>Direção:</span> André Pellenz</p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Paulo Gustavo, Rodrigo Pandolfo, Mariana Xavier, Herson Capri,
+              Ingrid Guimarães.
             </p>
-            <p>Disponivel em:</p>
+
             <div class="onde-assistir">
+              <span>Disponivel em:</span>
               <p>GloboPlay</p>
               <p>PrimeVideo</p>
             </div>
