seção curiosidades finalizada

--- a/index.html
+++ b/index.html
@@ -53,7 +53,29 @@
               Paulo Gustavo, Rodrigo Pandolfo, Mariana Xavier, Herson Capri,
               Ingrid Guimarães.
             </p>
-
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>GloboPlay</p>
+              <p>PrimeVideo</p>
+            </div>
+          </div>
+        </div>
+        <h2>Comédia</h2>
+        <div class="filme-caixa">
+          <img src="img/minha-mãe.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>Minha Mãe é Uma Peça (2013)</h3>
+            <p class="filme-sobre">
+              Dona Hermínia é uma mulher de meia idade, divorciada, que se
+              dedica inteiramente aos filhos. Quando eles decidem se mudar, ela
+              precisa aprender a lidar com a solidão e redescobrir a si mesma.
+            </p>
+            <p class="filme-diretor"><span>Direção:</span> André Pellenz</p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Paulo Gustavo, Rodrigo Pandolfo, Mariana Xavier, Herson Capri,
+              Ingrid Guimarães.
+            </p>
             <div class="onde-assistir">
               <span>Disponivel em:</span>
               <p>GloboPlay</p>
@@ -63,29 +85,47 @@
         </div>
       </section>
       <section id="curiosidades">
-        <h2>Curiosidades e Premiações</h2>
+        <h2>Curiosidades & Premiações</h2>
         <div class="curiosidades">
-          <h3>Curiosidades</h3>
           <div class="info-curi">
+            <h3><i class="fa-solid fa-star"></i>Curiosidades</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-              obcaecati corrupti dolore sequi dolor magnam ex vel dicta!
-              Laboriosam itaque illo optio doloremque exercitationem aliquam
-              porro quae at animi voluptate.
+              O cinema brasileiro teve seu início em 1898, apenas três anos após
+              a primeira exibição dos irmãos Lumière em Paris.
             </p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis at
-              accusantium aut aliquid consectetur sapiente repellat vero rerum
-              cupiditate itaque temporibus non, ullam quisquam placeat facilis
-              quam maiores iure unde.
+              Central do Brasil (1998) foi indicado ao Oscar de Melhor Filme
+              Estrangeiro e Melhor Atriz para Fernanda Montenegro.
+            </p>
+            <p>
+              Cidade de Deus (2002) recebeu 4 indicações ao Oscar e é
+              considerado um dos melhores filmes do século XXI.
+            </p>
+            <p>
+              O Pagador de Promessas (1962) ganhou a Palma de Ouro no Festival
+              de Cannes, o único filme brasileiro a conquistar o prêmio.
             </p>
           </div>
-        </div>
-        <div class="premiacoes">
-          <h3>Premiações</h3>
-          <div class="info-premi">
-            <h4>O Pagador de Promessas</h4>
-            <p>Palma de Ouro - Festival de Cannes (1962)</p>
+          <div class="premiacoes">
+            <div class="info-premi">
+              <h3><i class="fa-solid fa-medal"></i>Premiações</h3>
+              <div class="premiacao">
+                <h4>O Pagador de Promessas</h4>
+                <p>Palma de Ouro - Festival de Cannes (1962)</p>
+              </div>
+              <div class="premiacao">
+                <h4>Central do Brasil</h4>
+                <p>Urso de Ouro - Festival de Berlim (1998)</p>
+              </div>
+              <div class="premiacao">
+                <h4>Aquarius</h4>
+                <p>Indicado à Palma de Ouro - Cannes (2016)</p>
+              </div>
+              <div class="premiacao">
+                <h4>Bacurau</h4>
+                <p>Prêmio do Júri - Festival de Cannes (2019)</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
