--- a/index.html
+++ b/index.html
@@ -60,6 +60,28 @@
             </div>
           </div>
         </div>
+        <div class="filme-caixa">
+          <img src="img/auto-compadecida.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>O Auto da Compadecida (2000)</h3>
+            <p class="filme-sobre">
+              As aventuras de João Grilo e Chicó, dois nordestinos pobres que
+              vivem de pequenos golpes. Após a morte, eles comparecem ao
+              julgamento final onde são defendidos pela Compadecida.
+            </p>
+            <p class="filme-diretor"><span>Direção:</span> Guel Arraes</p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Matheus Nachtergaele, Selton Mello, Rogério Cardoso, Denise Fraga,
+              Diogo Vilela
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>GloboPlay</p>
+              <p>Netflix</p>
+            </div>
+          </div>
+        </div>
         <h2>Comédia</h2>
         <div class="filme-caixa">
           <img src="img/minha-mãe.jpg" alt="" />
@@ -131,14 +153,18 @@
       </section>
     </main>
     <footer>
-      <h3>Cinema Brasileiro</h3>
-      <p>Uma celebração do cinema nacional brasileiro</p>
-      <p>© 2025 Cinema Brasileiro. Desenvolvido com paixão pela sétima arte.</p>
-      <p>
-        Todas as informações sobre filmes são de domínio público. As plataformas
-        de streaming mencionadas são de propriedade de suas respectivas
-        empresas.
-      </p>
+      <div>
+        <h3><i class="fa-solid fa-film"></i>Cinema Brasileiro</h3>
+        <p>Uma celebração do cinema nacional brasileiro</p>
+        <p>
+          © 2025 Cinema Brasileiro. Desenvolvido com paixão pela sétima arte.
+        </p>
+        <p>
+          Todas as informações sobre filmes são de domínio público. As
+          plataformas de streaming mencionadas são de propriedade de suas
+          respectivas empresas.
+        </p>
+      </div>
     </footer>
   </body>
   <script>
