--- a/index.html
+++ b/index.html
@@ -82,26 +82,208 @@
             </div>
           </div>
         </div>
-        <h2>Comédia</h2>
         <div class="filme-caixa">
-          <img src="img/minha-mãe.jpg" alt="" />
+          <img src="img/lisbela.jpeg" alt="" />
           <div class="filme-desc">
-            <h3>Minha Mãe é Uma Peça (2013)</h3>
+            <h3>Lisbela e o Prisioneiro (2003)</h3>
             <p class="filme-sobre">
-              Dona Hermínia é uma mulher de meia idade, divorciada, que se
-              dedica inteiramente aos filhos. Quando eles decidem se mudar, ela
-              precisa aprender a lidar com a solidão e redescobrir a si mesma.
+              Lisbela é uma moça sonhadora apaixonada por cinema que se apaixona
+              por Leléu, um malandro charmoso que está fugindo de um perigoso
+              pistoleiro.
             </p>
-            <p class="filme-diretor"><span>Direção:</span> André Pellenz</p>
+            <p class="filme-diretor"><span>Direção:</span> Guel Arraes</p>
             <p class="filme-elenco">
               <span>Elenco principal:</span>
-              Paulo Gustavo, Rodrigo Pandolfo, Mariana Xavier, Herson Capri,
-              Ingrid Guimarães.
+              Selton Mello, Débora Falabella, Marco Nanini, Virginia Cavendish,
+              Bruno Garcia
             </p>
             <div class="onde-assistir">
               <span>Disponivel em:</span>
               <p>GloboPlay</p>
               <p>PrimeVideo</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/diva.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>Divã (2009)</h3>
+            <p class="filme-sobre">
+              Mercedes precisa de terapia urgente quando seu relacionamento de
+              quase quarenta anos entra em crise. Na busca por respostas, ela
+              redescobre sua sexualidade e liberdade.
+            </p>
+            <p class="filme-diretor">
+              <span>Direção:</span> José Alvarenga Jr.
+            </p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Lilia Cabral, Marília Pêra, Lúcio Mauro Filho, Paulo Vilhena, José
+              Wilker
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>GloboPlay</p>
+              <p>HBO Max</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/homem-do-futuro.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>O Homem do Futuro (2011)</h3>
+            <p class="filme-sobre">
+              Um cientista frustrado inventa acidentalmente uma máquina do tempo
+              e volta ao passado para corrigir os erros de sua juventude, mas as
+              coisas não saem como planejado.
+            </p>
+            <p class="filme-diretor"><span>Direção:</span> Cláudio Torres</p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Wagner Moura, Alinne Moraes, Maria Luísa Mendonça, Gabriel Braga
+              Nunes, Fernando Ceylão
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>GloboPlay</p>
+              <p>Netflix</p>
+            </div>
+          </div>
+        </div>
+        <h2>Drama</h2>
+        <div class="filme-caixa">
+          <img src="img/central-do-brasil.jpeg" alt="" />
+          <div class="filme-desc">
+            <h3>Central do Brasil (1998)</h3>
+            <p class="filme-sobre">
+              Dora escreve cartas para analfabetos na estação Central do Brasil.
+              Quando conhece o menino Josué, que perdeu a mãe, os dois embarcam
+              em uma jornada em busca do pai do garoto.
+            </p>
+            <p class="filme-diretor"><span>Direção:</span> Walter Salles</p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Fernanda Montenegro, Vinícius de Oliveira, Marília Pêra, Soia
+              Lira, Othon Bastos
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>GloboPlay</p>
+              <p>Telecine</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/filhos-de-Francisco.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>Dois Filhos de Francisco (2005)</h3>
+            <p class="filme-sobre">
+              A história real da dupla Zezé Di Camargo & Luciano, desde a
+              infância pobre no interior de Goiás até se tornarem uma das duplas
+              sertanejas mais famosas do Brasil.
+            </p>
+            <p class="filme-diretor"><span>Direção:</span> Breno Silveira</p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Ângelo Antônio, Dira Paes, Thiago Mendonça, Marcos Henrique,
+              Dandara de Morais
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>GloboPlay</p>
+              <p>PrimeVideo</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/casa-de-areia.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>Casa de Areia (2005)</h3>
+            <p class="filme-sobre">
+              Em 1910, uma família chega aos Lençóis Maranhenses para realizar o
+              sonho de construir uma cidade. Três gerações de mulheres lutam
+              pela sobrevivência em meio às dunas.
+            </p>
+            <p class="filme-diretor">
+              <span>Direção:</span> Andrucha Waddington
+            </p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Fernanda Montenegro, Fernanda Torres, Ruy Guerra, Seu Jorge, Luiz
+              Melodia
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>Gloogle Play</p>
+              <p>PrimeVideo</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/cidade-de-deus.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>Cidade de Deus (2002)</h3>
+            <p class="filme-sobre">
+              A história da criminalidade na favela Cidade de Deus, no Rio de
+              Janeiro, contada através dos olhos de Buscapé, um jovem que sonha
+              em ser fotógrafo.
+            </p>
+            <p class="filme-diretor">
+              <span>Direção:</span> Fernando Meirelles e Kátia Lund
+            </p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Alexandre Rodrigues, Leandro Firmino, Phellipe Haagensen, Douglas
+              Silva, Jonathan Haagensen
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>Gloogle Play</p>
+              <p>Netflix</p>
+            </div>
+          </div>
+        </div>
+        <h2>Ação/Crime</h2>
+        <div class="filme-caixa">
+          <img src="img/tropa-de-elite.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>Tropa de Elite (2007)</h3>
+            <p class="filme-sobre">
+              Capitão Nascimento do BOPE precisa encontrar um substituto
+              enquanto lida com a corrupção policial e o tráfico de drogas nas
+              favelas do Rio de Janeiro.
+            </p>
+            <p class="filme-diretor"><span>Direção:</span> José Padilha</p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Wagner Moura, Caio Junqueira, André Ramiro, Maria Ribeiro,
+              Fernanda Machado
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>GloboPlay</p>
+              <p>PrimeVideo</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/onibus-174.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>Ônibus 174 (2002)</h3>
+            <p class="filme-sobre">
+              Documentário sobre o sequestro do ônibus 174 no Rio de Janeiro em
+              2000, explorando a vida de Sandro e as questões sociais do Brasil.
+            </p>
+            <p class="filme-diretor"><span>Direção:</span> José Padilha</p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Sandro do Nascimento, Rodrigo Pimentel, Luiz Eduardo Soares,
+              Yvonne Bezerra de Mello, Paulo Fontenelle
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>Youtube</p>
+              <p>GloboPlay</p>
             </div>
           </div>
         </div>
@@ -160,8 +342,9 @@
           © 2025 Cinema Brasileiro. Desenvolvido com paixão pela sétima arte.
         </p>
         <p>
-          Todas as informações sobre filmes são de domínio público. As
-          plataformas de streaming mencionadas são de propriedade de suas
+          Este site tem finalidade educacional e demonstrativa.. Todas as
+          informações sobre filmes são de domínio público. As plataformas de
+          streaming mencionadas e cartazes são de propriedade de suas
           respectivas empresas.
         </p>
       </div>
