adicionando outros filmes

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
         </div>
         <div class="filme-caixa">
-          <img src="img/lisbela.jpeg" alt="" />
+          <img src="img/lisbela-e-o-prisioneiro.jpg" alt="" />
           <div class="filme-desc">
             <h3>Lisbela e o Prisioneiro (2003)</h3>
             <p class="filme-sobre">
@@ -219,30 +219,6 @@
             </div>
           </div>
         </div>
-        <div class="filme-caixa">
-          <img src="img/cidade-de-deus.jpg" alt="" />
-          <div class="filme-desc">
-            <h3>Cidade de Deus (2002)</h3>
-            <p class="filme-sobre">
-              A história da criminalidade na favela Cidade de Deus, no Rio de
-              Janeiro, contada através dos olhos de Buscapé, um jovem que sonha
-              em ser fotógrafo.
-            </p>
-            <p class="filme-diretor">
-              <span>Direção:</span> Fernando Meirelles e Kátia Lund
-            </p>
-            <p class="filme-elenco">
-              <span>Elenco principal:</span>
-              Alexandre Rodrigues, Leandro Firmino, Phellipe Haagensen, Douglas
-              Silva, Jonathan Haagensen
-            </p>
-            <div class="onde-assistir">
-              <span>Disponivel em:</span>
-              <p>Gloogle Play</p>
-              <p>Netflix</p>
-            </div>
-          </div>
-        </div>
         <h2>Ação/Crime</h2>
         <div class="filme-caixa">
           <img src="img/tropa-de-elite.jpg" alt="" />
@@ -284,6 +260,125 @@
               <span>Disponivel em:</span>
               <p>Youtube</p>
               <p>GloboPlay</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/cidade-de-deus.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>Cidade de Deus (2002)</h3>
+            <p class="filme-sobre">
+              A história da criminalidade na favela Cidade de Deus, no Rio de
+              Janeiro, contada através dos olhos de Buscapé, um jovem que sonha
+              em ser fotógrafo.
+            </p>
+            <p class="filme-diretor">
+              <span>Direção:</span> Fernando Meirelles e Kátia Lund
+            </p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Alexandre Rodrigues, Leandro Firmino, Phellipe Haagensen, Douglas
+              Silva, Jonathan Haagensen
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>Gloogle Play</p>
+              <p>Netflix</p>
+            </div>
+          </div>
+        </div>
+        <h2>Suspense/Terror</h2>
+        <div class="filme-caixa">
+          <img src="img/o-animal-cordial.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>O Animal Cordial (2017)</h3>
+            <p class="filme-sobre">
+              Quando um restaurante sofisticado é fechado para uma celebração
+              privada, os funcionários se veem reféns de criminosos mascarados
+              em uma noite de tensão e violência.
+            </p>
+            <p class="filme-diretor">
+              <span>Direção:</span> Gabriela Amaral Almeida
+            </p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Murilo Benício, Luciana Paes, Irandhir Santos, Camila Morgado,
+              Humberto Carrão
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>Telecine</p>
+              <p>PrimeVideo</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/as-boas-maneiras.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>As Boas Maneiras (2017)</h3>
+            <p class="filme-sobre">
+              Uma babá contratada para cuidar de uma mulher grávida descobre que
+              o bebê esconde um segredo obscuro que transformará suas vidas para
+              sempre.
+            </p>
+            <p class="filme-diretor">
+              <span>Direção:</span> Juliana Rojas e Marco Dutra
+            </p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Isabél Zuaa, Marjorie Estiano, Miguel Lobo, Cida Moreira, Andrea
+              Marquee
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>MUBI</p>
+              <p>PrimeVideo</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/meia-noite-levarei-sua-alma.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>À Meia-Noite Levarei Sua Alma (1964)</h3>
+            <p class="filme-sobre">
+              Zé do Caixão é um coveiro cruel que busca a mulher perfeita para
+              dar-lhe um filho, não hesitando em matar quem ficar em seu
+              caminho. Um clássico do terror brasileiro.
+            </p>
+            <p class="filme-diretor">
+              <span>Direção:</span> José Mojica Marins
+            </p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              José Mojica Marins, Magda Mei, Nivaldo Lima, Valéria Vasquez,
+              Ilídio Martins
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>Youtube</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/trabalhar-cansa.webp" alt="" />
+          <div class="filme-desc">
+            <h3>Trabalhar Cansa (2011)</h3>
+            <p class="filme-sobre">
+              Uma dona de mercado começa a ter experiências perturbadoras no
+              estabelecimento, enquanto lida com problemas financeiros e
+              familiares que a levam ao limite.
+            </p>
+            <p class="filme-diretor">
+              <span>Direção:</span> Juliana Rojas e Marco Dutra
+            </p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Helena Albergaria, Marat Descartes, Naloana Lima, Clarissa Kiste,
+              Luiz Carlos de Moraes
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>MUBI</p>
             </div>
           </div>
         </div>
@@ -342,7 +437,7 @@
           © 2025 Cinema Brasileiro. Desenvolvido com paixão pela sétima arte.
         </p>
         <p>
-          Este site tem finalidade educacional e demonstrativa.. Todas as
+          Este site tem finalidade educacional e demonstrativa. Todas as
           informações sobre filmes são de domínio público. As plataformas de
           streaming mencionadas e cartazes são de propriedade de suas
           respectivas empresas.
